--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <title>Example</title>
     </head>
     <body>
-        <p>This is an example of a simple HTML page with one paragraph !.</p>
+        <p>This is an example of a simple HTML page with one paragraph !.
+            Login form
+        </p>
     </body>
 </html>
